# MorseCode_keyer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml  cmake.yml  codeql-analysis.yml
include/: Main_UI.h  button.h  render.h  setup.h  textbox.h
lib/: .ninja_deps  .ninja_log  CMakeCache.txt  MorseCode_keyer.ilk  build.ninja  cmake_install.cmake
src/: CMakeLists.txt  MAIN_UI.cpp  Main_UI.cpp  button.cpp  dictionary.h  main.cpp  nums.h  render.cpp  setup.cpp  textbox.cpp
src/Network/: ChatSystem.h  Client.h  Server.h  client.cpp  server.cpp
